--- a/main.css
+++ b/main.css
@@ -161,4 +161,28 @@ header ul li:hover {
     text-decoration: underline;
 }
 
+.footer {
+    position: absolute;
+    color: #4e4e4e;
+    bottom: 0px;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: rgba(256,256,256,0.5);
+    padding: 4px 0;
+}
+
+.footer span {
+    font-size: 11px;
+}
+
+.footer a {
+    font-weight: bold;
+}
+
+.footer a:hover {
+    color: black;
+}
+
 /*# sourceMappingURL=main.css.map*/
